Side bar alignment fixed.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,7 @@
         position: relative;
         min-width: 0;
         transition: all .2s;
+        background: #ffff;
     }
 
     .title {
@@ -24,9 +25,9 @@
         color: #ffff;
     }
 
-    // .content {
-    //     height: 100%;
-    // }
+    .content {
+        height: 100%;
+    }
 
     .avatar {
         color: #f56a00;
